RESOLVED FIXED101049
Fix build warning in PluginView.cpp on release build
https://bugs.webkit.org/show_bug.cgi?id=101049
Summary Fix build warning in PluginView.cpp on release build
KyungTae Kim
Reported 2012-11-02 06:46:46 PDT
Source/WebCore/plugins/PluginView.cpp:1475:9: warning: unused parameter 'protocol' [-Wunused-parameter] Source/WebCore/plugins/PluginView.cpp:1475:9: warning: unused parameter 'host' [-Wunused-parameter] Source/WebCore/plugins/PluginView.cpp:1475:9: warning: unused parameter 'port' [-Wunused-parameter] The protocol, host, port parameters for PluginView::getAuthenticationInfo are not used when LOG_DISABLED
Attachments
Patch (1.67 KB, patch)
2012-11-02 06:49 PDT, KyungTae Kim
no flags
KyungTae Kim
Comment 1 2012-11-02 06:49:20 PDT
Kentaro Hara
Comment 2 2012-11-02 09:16:29 PDT
Comment on attachment 172050 [details] Patch Looks OK
WebKit Review Bot
Comment 3 2012-11-02 23:26:34 PDT
Comment on attachment 172050 [details] Patch Clearing flags on attachment: 172050 Committed r133390: <http://trac.webkit.org/changeset/133390>
WebKit Review Bot
Comment 4 2012-11-02 23:26:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.