Fix build warning in PluginView.cpp on release build https://bugs.webkit.org/show_bug.cgi?id=101049

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-11-02
Reviewed by Kentaro Hara.

The protocol, host, port parameters are not used when LOG_DISABLED
Use UNUSED_PARAM macro for removing -Wunused-parameter warning

* plugins/PluginView.cpp:
(WebCore::PluginView::getAuthenticationInfo):

Canonical link: https://commits.webkit.org/119228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133390 268f45cc-cd09-0410-ab3c-d52691b4dbfc